fix: increase contrast for text placeholder

--- a/github.user.styl
+++ b/github.user.styl
@@ -838,7 +838,7 @@ SA = _sc_a
 
     html {
         scrollbar-color: bg5 bg3
-        ::placeholder { c: fg5 }
+        ::placeholder { c: fg4 }
 
         body {
             /// Application background.
